Fixed the overflow

--- a/portfolio_v2/css/style.css
+++ b/portfolio_v2/css/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  overflow: hidden;
+  overflowX: hidden;
   margin: 0;
   padding: 0;
 }
@@ -205,4 +205,5 @@ section#contact a{
   font-weight: bold;
 
 }
+
 
